--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
 					<section id="two" class="wrapper style2 spotlights">
 
 						<section class="myapp-card">
-							<a class="image app-icon"><img src="images/medplan.jpg" alt="" class="app-image"/></a>
+							<a class="image app-icon"><img src="images/medplan.jpg" class="app-image"/></a>
 							<div class="content">
 								<div class="inner">
 									<h3>MedPlan</h3>
-									<p>Final bootcamp project. Made in collaboration of Rafael Lazaro. <br>
+									<p>Final bootcamp project. Built in team with Rafael Lazaro. <br>
 									Our will to facilitate the life of patients with long-term and chronic diseases pushed us to create this web application where patients can book appointments and follow up on their prescriptions (through a calendar), while doctors can receive bookings, follow up their appoinements, add prescriptions and medical reports.</p>
 									<ul class="actions">
 										<li><a target="_blank" href="https://medplan-app.herokuapp.com/" class="button">See project</a></li>
@@ -109,11 +109,11 @@
 						</section>
 
 						<section class="myapp-card">
-							<a class="image app-icon"><img src="images/cosmeticshack.jpg" alt="" class="app-image"/></a>
+							<a class="image app-icon"><img src="images/cosmeticshack.jpg" class="app-image"/></a>
 							<div class="content">
 								<div class="inner">
 									<h3>Cosmetics Hack</h3>
-									<p>Second bootcamp project. Made in collaboration of Lanette Lanting.<br>
+									<p>Second bootcamp project. Built in team with Lanette Lanting.<br>
 									I am passionate about natural products and decided to create this collaborative web application in which users can share their DIY natural cosmetics recipes.</p>
 									<ul class="actions">
 										<li><a target="_blank" href="https://cosmeticshack.herokuapp.com/" class="button">See project</a></li>
@@ -123,7 +123,7 @@
 						</section>
 
 						<section class="myapp-card">
-							<a class="image app-icon"><img src="images/oceansavior.jpg" alt="" class="app-image"/></a>
+							<a class="image app-icon"><img src="images/oceansavior.jpg" class="app-image"/></a>
 							<div class="content">
 								<div class="inner">
 									<h3>Ocean Savior</h3>
