--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link href="https://fonts.googleapis.com/css2?family=Mrs+Saint+Delafield&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
+		<link rel="icon" type="image/png" href="./images/favicon.png"/>
 
 
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -20,7 +21,12 @@
 
 		<!-- Sidebar -->
 			<section id="sidebar">
+				
 				<div class="inner">
+					<div class="logo">
+						<a href="#intro"><img src="./images/favicon.png"></a></li>
+					</div>
+
 					<nav>
 						<ul>
 							<li class="nav-link"><a href="#intro" >Home</a></li>
@@ -30,6 +36,7 @@
 						</ul>
 					</nav>
 				</div>
+
 			</section>
 
 		<!-- Wrapper -->
