--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<!-- Sidebar -->
 		<section id="sidebar">
 
-			<a href="#intro" class="logo-link"><img src="./images/favicon.png" class="logo"></a>
+			<a href="#intro" class="inner logo-link"><img src="./images/favicon.png" class="logo"></a>
 			
 			<div class="inner">
 
@@ -80,8 +80,11 @@
 						</section>
 					</div> -->
 
+					<a href="./images/Maeva Merrou CV dev-eng 2020.pdf" target="_blank" class="button scrolly">Download my CV</a>
+					<br>
+
 					<div class="skills-card">
-						<h3>Skills</h3>
+						<h2>Skills</h2>
 						<div class="skills-img-card">
 							<img src="./images/html5.png" alt="icon" class="skills-img">
 							<img src="./images/javascript.png" alt="icon" class="skills-img">
@@ -94,55 +97,45 @@
 							<!-- <img src="./images/heroku.png" alt="icon" class="skills-img"> -->
 						</div>													
 					</div>
+
+
+
 					
 				</div>
 			</section>
 
 			<!-- Two -->				
+			<!-- <section id="two" class="wrapper style2 spotlights"> -->
 			<section id="two" class="wrapper style2 spotlights">
 
 				<section class="myapp-card">
-					<a class="image app-icon"><img src="images/medplan.jpg" class="app-image"/></a>
-					<div class="content">
-						<div class="inner">
-							<h3>MedPlan</h3>
-							<p>Final bootcamp project. Built in team with Rafael Lazaro. <br>
-							Our will to facilitate the life of patients with long-term and chronic diseases pushed us to create this web application where patients can book appointments and follow up on their prescriptions (through a calendar), while doctors can receive bookings, follow up their appoinements, add prescriptions and medical reports.</p>
-							<ul class="actions">
-								<li>
-									<a target="_blank" href="https://medplan-app.herokuapp.com/" class="button">See project</a>
-								</li>
-							</ul>
-						</div>
+					<img src="images/medplan.jpg" class="app-image"/>
+					<div class="apps-content">
+						<h3>MedPlan</h3>
+						<p>Final bootcamp project. Built in team with Rafael Lazaro. <br>
+						Our will to facilitate the life of patients with long-term and chronic diseases pushed us to create this web application where patients can book appointments and follow up on their prescriptions (through a calendar), while doctors can receive bookings, follow up their appoinements, add prescriptions and medical reports.</p>
+						<a target="_blank" href="https://medplan-app.herokuapp.com/" class="button">See project</a>	
 					</div>
 				</section>
 
 				<section class="myapp-card">
-					<a class="image app-icon"><img src="images/cosmeticshack.jpg" class="app-image"/></a>
-					<div class="content">
-						<div class="inner">
-							<h3>Cosmetics Hack</h3>
-							<p>Second bootcamp project. Built in team with Lanette Lanting.<br>
-							I am passionate about natural products and decided to create this collaborative web application in which users can share their DIY natural cosmetics recipes.</p>
-							<ul class="actions">
-								<li><a target="_blank" href="https://cosmeticshack.herokuapp.com/" class="button">See project</a></li>
-							</ul>
-						</div>
+					<img src="images/cosmeticshack.jpg" class="app-image"/>
+					<div class="apps-content">
+						<h3>Cosmetics Hack</h3>
+						<p>Second bootcamp project. Built in team with Lanette Lanting.<br>
+						I am passionate about natural products and decided to create this collaborative web application in which users can share their DIY natural cosmetics recipes.</p>
+						<a target="_blank" href="https://cosmeticshack.herokuapp.com/" class="button">See project</a>
 					</div>
 				</section>
 
 				<section class="myapp-card">
-					<a class="image app-icon"><img src="images/oceansavior.jpg" class="app-image"/></a>
-					<div class="content">
-						<div class="inner">
-							<h3>Ocean Savior</h3>
-							<p>First bootcamp project.<br>
-							For this project, I had to create a game. As a nature lover and concerned about the "Climate crisis", the idea of building a game with this thema naturally came to my mind.<br>
-							In this game, the character, a diver immersed in the ocean, has the mission to keep the ocean clean. She will need to catch trash items and avoid fishes and corals.</p>
-							<ul class="actions">
-								<li><a target="_blank" href="https://maevamerrou.github.io/OceanSavior/" class="button">See project</a></li>
-							</ul>
-						</div>
+					<img src="images/oceansavior.jpg" class="app-image"/>
+					<div class="apps-content">
+						<h3>Ocean Savior</h3>
+						<p>First bootcamp project.<br>
+						For this project, I had to create a game. As a nature lover and concerned about the "Climate crisis", the idea of building a game with this thema naturally came to my mind.<br>
+						In this game, the character, a diver immersed in the ocean, has the mission to keep the ocean clean. She will need to catch trash items and avoid fishes and corals.</p>
+						<a target="_blank" href="https://maevamerrou.github.io/OceanSavior/" class="button">See project</a>		
 					</div>
 				</section>
 
