--- a/index.html
+++ b/index.html
@@ -109,8 +109,10 @@
 			<section id="two" class="wrapper style2 spotlights">
 
 				<section class="myapp-card">
+
 					<img src="images/medplan.jpg" class="app-image"/>
-					<div class="apps-content">
+					
+					<div class="app-content">
 						<h3>MedPlan</h3>
 						<p>Final bootcamp project. Built in team with Rafael Lazaro. <br>
 						Our will to facilitate the life of patients with long-term and chronic diseases pushed us to create this web application where patients can book appointments and follow up on their prescriptions (through a calendar), while doctors can receive bookings, follow up their appoinements, add prescriptions and medical reports.</p>
@@ -119,8 +121,10 @@
 				</section>
 
 				<section class="myapp-card">
+
 					<img src="images/cosmeticshack.jpg" class="app-image"/>
-					<div class="apps-content">
+
+					<div class="app-content">
 						<h3>Cosmetics Hack</h3>
 						<p>Second bootcamp project. Built in team with Lanette Lanting.<br>
 						I am passionate about natural products and decided to create this collaborative web application in which users can share their DIY natural cosmetics recipes.</p>
@@ -130,7 +134,7 @@
 
 				<section class="myapp-card">
 					<img src="images/oceansavior.jpg" class="app-image"/>
-					<div class="apps-content">
+					<div class="app-content">
 						<h3>Ocean Savior</h3>
 						<p>First bootcamp project.<br>
 						For this project, I had to create a game. As a nature lover and concerned about the "Climate crisis", the idea of building a game with this thema naturally came to my mind.<br>
