--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
 
 			<a href="#intro" class="inner logo-link"><img src="./images/favicon.png" class="logo"></a>
 			
-			<div class="inner">
 
-				<nav>
+				<nav class="inner">
 					<ul>						
 						<li class="nav-link"><a href="#intro" >Home</a></li>
 						<li class="nav-link"><a href="#one">About</a></li>
@@ -36,8 +35,6 @@
 						<li class="nav-link"><a href="#three">Contact</a></li>
 					</ul>
 				</nav>
-			</div>
-
 		</section>
 
 		<!-- Wrapper -->
