--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 				</nav>
 		</section>
 
-		<!-- Wrapper -->
+		<!-- Wrapper / Content -->
 		<div id="wrapper">
 
-			<!-- Intro -->
+			<!-- Intro / Home -->
 			<section id="intro" class="wrapper style1 fullscreen fade-up">
 				<div class="inner">
 					<h1><span class="first-name">Maëva     </span>Merrou</h1>
@@ -52,7 +52,7 @@
 				</div>
 			</section>
 
-			<!-- One -->
+			<!-- One: About -->
 			<section id="one" class="wrapper style3 fade-up">
 				<div class="inner">
 					<h2>A little introduction...</h2>
@@ -79,6 +79,8 @@
 
 					<a href="./images/Maeva Merrou CV dev-eng 2020.pdf" target="_blank" class="button scrolly">Download my CV</a>
 					<br>
+					<br>
+					<br>
 
 					<div class="skills-card">
 						<h2>Skills</h2>
@@ -94,14 +96,11 @@
 							<!-- <img src="./images/heroku.png" alt="icon" class="skills-img"> -->
 						</div>													
 					</div>
-
-
-
 					
 				</div>
 			</section>
 
-			<!-- Two -->				
+			<!-- Two: Work -->				
 			<!-- <section id="two" class="wrapper style2 spotlights"> -->
 			<section id="two" class="wrapper style2 spotlights">
 
@@ -142,13 +141,13 @@
 
 			</section>
 
-			<!-- Three -->
+			<!-- Three: Contact -->
 			<section id="three" class="wrapper style1 fade-up">
 				<div class="inner">
 					<h2>Let's get in touch!</h2>
 					<p>Don't hesitate to reach out to me if you need information or are interested in working together.</p>
 
-					<div class="split style1">
+					<div class="split style1 form-contact">
 
 						<section>
 							<form action="https://formspree.io/meqpjoyn" method="POST">
