--- a/index.html
+++ b/index.html
@@ -57,15 +57,14 @@
 				<div class="inner">
 					<h2>A little introduction...</h2>
 					<p><em>
-					I was borned and raised in France, but then moved to Amsterdam a few years ago.<br>
-					Passionate about building beautiful and user-friendly web applications through carefully crafted code.<br>
+					Originally from Marseille in France, I moved to the Netherlands, in the Amsterdam region, a few years ago.<br>		
 					<br>
 					After spending several years of my career in sales administration and marketing, my curiosity and the interest I’ve always had about understanding the technologies we use every day, pushed me to switch my career to programming.<br>
-					In 2020, I graduated from the Full-Stack Web Development bootcamp from Ironhack.<br>
+					In 2020, I graduated from the Full-Stack Web Development bootcamp from Ironhack. This course was done remotely (in a live class environment).<br>
 					<br>
-					During my previous work experiences, Ive learned to be resourceful and creative but also to be result-driven and detail-oriented. I am also curious and a fast learner.<br>
-					I am now looking for a job as a Front-End Developer to experience new adventures and challenges!</em> 
-					</p>
+					During my previous work experiences, I have learned to be resourceful and creative but also to be result-driven and detail-oriented. I am very curious and detail-oriented and therefore a fast learner.<br>
+					Passionate about building beautiful and user-friendly web applications through carefully crafted code, I am currently looking for new adventure and challenges to start my career in Development!
+					</em></p>
 					<!-- <div class="features">
 						<section>
 							<h3>Design</h3>
