--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<h2>Front-end Developer</h2>
 					<p><em>I develop innovative and useful applications with a user-driven approach and a focus on making a positive impact.</em></p>
 					<ul class="actions">
-						<li><a href="#one" class="button scrolly"> Know More</a></li>
+						<li><a href="#one" class="button scrolly">More</a></li>
 					</ul>
 				</div>
 			</section>
@@ -59,7 +59,7 @@
 					<p><em>
 					Originally from Marseille in France, I moved to the Netherlands, in the Amsterdam region, a few years ago.<br>		
 					<br>
-					After spending several years of my career in sales administration and marketing, my curiosity and the interest I’ve always had about understanding the technologies we use every day, pushed me to switch my career to programming.<br>
+					After spending several years of my career in Sales Administration and Marketing, my curiosity and the interest I’ve always had about understanding the technologies we use every day, pushed me to switch my career to programming.<br>
 					In 2020, I graduated from the Full-Stack Web Development bootcamp from Ironhack. This course was done remotely (in a live class environment).<br>
 					<br>
 					During my previous work experiences, I have learned to be resourceful and creative but also to be result-driven and detail-oriented. I am very curious and detail-oriented and therefore a fast learner.<br>
